--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
+    "fontawesome": "^5.6.3",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "next": "^14.2.15",
